# miso-tutorial-app

./: .gitignore  .travis.yaml  .travis.yml  Dockerfile  LICENSE  README.md  miso-tutorial-app.cabal  package.json  package.yaml  run.sh  shippable.yml  stack.yaml  webpack.config.js
api/: api.js  db.json
client/: Effect.hs  Main.hs  Update.hs  index.html  index.js  package.yaml  stack.yaml
server/: API.hs  Api.hs  Html.hs  Main.hs  Server.hs  package.yaml  stack.yaml
shared/: Action.hs  Model.hs  Routing.hs  View.hs
shared/Player/: Edit.hs  List.hs
src/: Action.hs  Effect.hs  Main.hs  Model.hs  Routing.hs  View.hs
src/Player/: Edit.hs
