name:                miso-tutorial-app
version:             0.1.0.0
synopsis:            An example GHCJS + Miso single page application.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable miso-tutorial-app
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       aeson
                     , base
                     , bytestring
                     , ghcjs-base
                     , miso
                     , network-uri
                     , servant
                     , utf8-string
  default-language:    Haskell2010
